--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,29 +1,39 @@
 <footer class="bg-gray-900 border-t border-gray-800">
-  <div class="container mx-auto px-4 py-8">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <div>
-              <h3 class="text-xl font-bold mb-4">Vazha MC</h3>
-              <p class="text-gray-400">Experience Minecraft like never before with our curated mod packs!</p>
-          </div>
-          <div>
-              <h3 class="text-xl font-bold mb-4">Quick Links</h3>
-              <ul class="space-y-2">
-                  <li><a href="/rules" class="text-gray-400 hover:text-white transition-colors">Rules</a></li>
-                  <li><a href="/shot" class="text-gray-400 hover:text-white transition-colors">Admin</a></li>
-                  <li><a href="/" class="text-gray-400 hover:text-white transition-colors">Vote</a></li>
-              </ul>
-          </div>
-          <div>
-              <h3 class="text-xl font-bold mb-4">Connect</h3>
-              <ul class="space-y-2">
-                  <li><a href="https://discord.gg/EY48TztpNu" class="text-gray-400 hover:text-white transition-colors">Discord</a></li>
-                  <li><a href="https://youtube.com/@vazhamc5372?si=YlAzDaf9n0CE0brj" class="text-gray-400 hover:text-white transition-colors">Youtube</a></li>
-                  <li><a href="https://www.instagram.com/vazhamc?igsh=d3hiaWYyZGVwdWlp" class="text-gray-400 hover:text-white transition-colors">Instagram</a></li>
-              </ul>
-          </div>
-      </div>
-      <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-          <p>&copy; 2025 shotdevs. All rights reserved.</p>
-      </div>
-  </div>
-</footer>
+    <div class="container mx-auto px-4 py-8">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+
+            <div>
+                <h3 class="text-xl font-bold mb-4 flex items-center space-x-3">
+                    <img src="/img/modded-favicon.ico" alt="Logo" class="w-10 h-10"> <!-- Medium size -->
+                    <span class="text-2xl">Vazha MC</span>
+                </h3>
+                <p class="text-gray-400">Experience Minecraft like never before with our curated mod packs!</p>
+            </div>
+  
+            <div>
+                <h3 class="text-xl font-bold mb-4">Quick Links</h3>
+                <ul class="space-y-2">
+                    <li><a href="/rules" class="text-gray-400 hover:text-white transition-colors">Rules</a></li>
+                    <li><a href="/shot" class="text-gray-400 hover:text-white transition-colors">Admin</a></li>
+                    <li><a href="/media" class="text-gray-400 hover:text-white transition-colors">Media</a></li>
+                    <li><a href="/" class="text-gray-400 hover:text-white transition-colors">Vote</a></li>
+                    <li><a href="/announcements" class="text-gray-400 hover:text-white transition-colors">Announcements</a></li>
+                </ul>
+            </div>
+            
+            <div>
+                <h3 class="text-xl font-bold mb-4">Connect</h3>
+                <ul class="space-y-2">
+                    <li><a href="https://discord.gg/EY48TztpNu" class="text-gray-400 hover:text-white transition-colors">Discord</a></li>
+                    <li><a href="https://youtube.com/@vazhamc5372?si=YlAzDaf9n0CE0brj" class="text-gray-400 hover:text-white transition-colors">YouTube</a></li>
+                    <li><a href="https://www.instagram.com/vazhamc?igsh=d3hiaWYyZGVwdWlp" class="text-gray-400 hover:text-white transition-colors">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="border-t border-gray-500 mt-8 pt-8 text-center text-gray-400">
+            <p>&copy; 2025 shotdevs. All rights reserved.</p>
+        </div>
+    </div>
+  </footer>
+  
