--- a/views/shotlogin.ejs
+++ b/views/shotlogin.ejs
@@ -29,10 +29,10 @@
     <!-- Header -->
     <header class="flex items-center justify-between px-4 py-2 bg-dark-400 border-b border-dark-100">
         <div class="flex items-center">
-            <span class="text-proxorange font-bold text-xl">SH</span>
-            <span class="text-proxblue font-bold text-xl">OT</span>
-            <span class="text-proxorange font-bold text-xl">XD</span>
-            <span class="ml-2 text-gray-400 text-sm">Main Database</span>
+            <span class="text-proxorange font-bold text-xl">VA</span>
+            <span class="text-proxblue font-bold text-xl">Z</span>
+            <span class="text-proxorange font-bold text-xl">HA</span>
+            <span class="ml-2 text-gray-400 text-sm">DB by shotxd</span>
         </div>
     </header>
 
