--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -52,6 +52,9 @@
                     <a href="/profile/manage/media" class="bg-emerald-600 hover:bg-emerald-800 px-6 py-2 rounded-lg shadow-md">
                         Manage Media
                     </a>
+                    <a href="/profile/tickets" class="bg-yellow-500 hover:bg-yellow-600 px-6 py-2 rounded-lg shadow-md">
+                        📝 Tickets
+                    </a>
                 </div>
             </div>
         </div>
